DD-41715: Add enforced validation on share with relevant parties
Call the results validation service before sharing hearing results.
If validation returns blocking errors, emit a results-validation-failed
event instead of proceeding with the share. Warnings are informational
and do not block sharing. Fail-open if the validation service is
unavailable.

- Add ResultsValidationFailed domain event
- Add ResultsValidationClient HTTP client with fail-open behaviour
- Add ValidationRequestMapper to build request from share command
- Integrate validation into ShareResultsCommandHandler.shareResultForDay
- Add event processor to publish public validation-failed event
- Register event schema and subscription

Change-Id: I93790a280e90e5d4cffd429a64631103295ee8a6