@@ -30,6 +30,7 @@ import uk.gov.moj.cpp.hearing.command.handler.service.validation.ResultsValidato
 import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationRequest;
 import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationRequestMapper;
 import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationResponse;
+import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationIssue;
 import uk.gov.moj.cpp.hearing.domain.aggregate.ApplicationAggregate;
 import uk.gov.moj.cpp.hearing.domain.aggregate.HearingAggregate;
 import uk.gov.moj.cpp.hearing.domain.event.result.ResultsValidationFailed;
@@ -191,10 +192,7 @@ public class ShareResultsCommandHandler extends AbstractCommandHandler {
 
         final ValidationRequest validationRequest = validationRequestMapper.toValidationRequest(command, hearingAggregate.getHearing());
         final String userIdString = userId != null ? userId.toString() : "";
-
         final ValidationResponse validationResponse = resultsValidationClient.validate(validationRequest, userIdString);
-        long end = System.currentTimeMillis();
-        LOGGER.error("Validation API call took {} ms for userId={} and for hearingId={}", end - start, userIdString, validationRequest.getHearingId());
 
         if (validationResponse.hasErrors()) {
             LOGGER.info("Share blocked by validation errors for hearing {}", command.getHearingId());
@@ -255,15 +253,15 @@ public class ShareResultsCommandHandler extends AbstractCommandHandler {
                                 e.getRuleId(), e.getSeverity(), e.getMessage(),
                                 e.getAffectedOffences().stream()
                                         .map(o -> o.getId())
-                                        .toList()))
-                        .toList())
+                                        .collect(Collectors.toList())))
+                        .collect(Collectors.toList()))
                 .withWarnings(validationResponse.getWarnings().stream()
                         .map(w -> new ResultsValidationFailed.ValidationError(
                                 w.getRuleId(), w.getSeverity(), w.getMessage(),
                                 w.getAffectedOffences().stream()
                                         .map(o -> o.getId())
-                                        .toList()))
-                        .toList())
+                                        .collect(Collectors.toList())))
+                        .collect(Collectors.toList()))
                 .build();
     }
 
